updated to pangaeapy version 1.0.22

--- a/Python/PANGAEApy_practical/pangaeapy_detailed_metadata_search.ipynb
+++ b/Python/PANGAEApy_practical/pangaeapy_detailed_metadata_search.ipynb
@@ -15,12 +15,11 @@
    "id": "a6651568-b289-418d-893d-32aaacb19b3e",
    "metadata": {},
    "source": [
-    "# Detailed examples on metadata extraction with PANGAEApy\n",
-    "Version: 0.1.0  \n",
+    "# Detailed examples on metadata extraction with PANGAEApy  \n",
     "By: Kathrin Riemann-Campe  \n",
-    "Last updated: 2024-05-02  \n",
+    "Last updated: 2025-05-07  \n",
     "\n",
-    "This notebook will show you the currently available list of metadata, which is callable via PANGAEApy PanDataSet.  \n",
+    "This notebook will show you the available list of metadata, which is callable via PANGAEApy PanDataSet version 1.0.22.  \n",
     "\n",
     "If you are looking for further detailed examples on how to write metadata in dataframes, tables and into files, go to [github page of PANGAEA community workshop](https://github.com/pangaea-data-publisher/community-workshop-material/tree/master/Python/PANGAEApy_practical).\n",
     "\n",
@@ -42,7 +41,7 @@
    "id": "e674478d-029f-4991-9132-3d439fa1bd3c",
    "metadata": {},
    "source": [
-    "Ff you need to install PANGAEApy use pip  \n",
+    "If you need to install PANGAEApy use pip  \n",
     "_!pip install pangaeapy_\n",
     "\n",
     "If you need to upgrade PANGAEApy use pip   \n",
@@ -73,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import necessary packages\n",
+    "### import necessary packages\n",
     "import pangaeapy as pan\n",
     "from pangaeapy.pandataset import PanDataSet\n",
     "\n",
@@ -99,7 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# show functions of pangaeapy\n",
+    "### show functions of pangaeapy\n",
     "help(pan)"
    ]
   },
@@ -110,8 +109,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# show functions of pangaeapy \n",
-    "#help(pan.pandataset)"
+    "### show functions of pangaeapy \n",
+    "# help(pan.pandataset)"
    ]
   },
   {
@@ -130,8 +129,8 @@
    "metadata": {},
    "source": [
     "example dataset URIs:  \n",
-    "https://doi.pangaea.de/10.1594/PANGAEA.935580 => Mastertrack  \n",
-    "https://doi.pangaea.de/10.1594/PANGAEA.963942 => CTD dataset with 86 events  \n",
+    "https://doi.pangaea.de/10.1594/PANGAEA.982284 => Mastertrack  \n",
+    "https://doi.pangaea.de/10.1594/PANGAEA.961721 => CTD dataset with many events  \n",
     "https://doi.pangaea.de/10.1594/PANGAEA.952014 => collection  \n",
     "https://doi.pangaea.de/10.1594/PANGAEA.960624 => dataset with 1 event and many parameters"
    ]
@@ -163,9 +162,9 @@
    },
    "outputs": [],
    "source": [
-    "#ds = PanDataSet('https://doi.pangaea.de/10.1594/PANGAEA.935580', include_data=False) # just metadata\n",
-    "#ds = PanDataSet('doi:10.1594/PANGAEA.935580', include_data=False) # just metadata\n",
-    "ds = PanDataSet(id=935580, include_data=False) # just metadata"
+    "# ds = PanDataSet('https://doi.pangaea.de/10.1594/PANGAEA.982284', include_data=False) # just metadata\n",
+    "# ds = PanDataSet('doi:10.1594/PANGAEA.982284', include_data=False) # just metadata\n",
+    "ds = PanDataSet(id=961721, include_data=False) # just metadata"
    ]
   },
   {
@@ -249,7 +248,7 @@
    },
    "outputs": [],
    "source": [
-    "ds.authors #list of PanAuthor"
+    "ds.authors # list of PanAuthor"
    ]
   },
   {
@@ -261,14 +260,14 @@
    },
    "outputs": [],
    "source": [
-    "# PanAuthor(lastname, firstname=None, ORCID=None, id=None)\n",
-    "# as individual values\n",
+    "### PanAuthor(lastname, firstname=None, orcid=None, id=None, affiliations=None)\n",
     "for au in ds.authors:\n",
     "    print(au.fullname)\n",
     "    print(au.lastname)\n",
     "    print(au.firstname)\n",
     "    print(au.ORCID)\n",
-    "    print(au.id)"
+    "    print(au.id)\n",
+    "    print(au.affiliations)"
    ]
   },
   {
@@ -280,8 +279,8 @@
    },
    "outputs": [],
    "source": [
-    "# PanAuthor(lastname, firstname=None, ORCID=None, id=None)\n",
-    "# as dataframe\n",
+    "### PanAuthor(lastname, firstname=None, orcid=None, id=None, affiliations=None)\n",
+    "# output as dataframe\n",
     "df_authors = pd.DataFrame()\n",
     "for ind, value in enumerate(ds.authors):\n",
     "    df_authors.loc[ind,'fullname'] = value.fullname\n",
@@ -289,6 +288,7 @@
     "    df_authors.loc[ind,'firstname'] = value.firstname\n",
     "    df_authors.loc[ind,'ORCID'] = value.ORCID\n",
     "    df_authors.loc[ind,'id'] = value.id\n",
+    "    df_authors.loc[ind,'affiliations'] = value.affiliations\n",
     "df_authors"
    ]
   },
@@ -313,7 +313,7 @@
    },
    "outputs": [],
    "source": [
-    "ds.parameters #list of PanParam (parameter objects)"
+    "ds.parameters # list of PanParam (parameter objects)"
    ]
   },
   {
@@ -331,41 +331,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b73bb66f-5539-4156-8d85-b9dcbe58da9a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# combine list of all parameter names with unit\n",
-    "params = \"; \".join([f'{param.name} [{param.unit}]' if param.unit else param.name for param in ds.params.values()])\n",
-    "print(params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "e4d570ce-21e1-4521-a362-e5e9255e35f8",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "#PanParam(id, name, shortName, source, unit=None, unit_id=None, format=None, terms=[], comment=None, PI={}, dataseries=None, colno=None, methodid=None)\n",
+    "### PanParam(id, name, shortName, synonym, type, source, unit=None, unit_id=None, format=None, terms=[], comment=None, PI={}, dataseries=None, colno=None, methodid=None, method)\n",
     "for param in ds.params.values():\n",
     "    print(param.id)\n",
     "    print(param.name)\n",
     "    print(param.shortName)\n",
+    "    print(param.synonym) # dictionary\n",
+    "    print(param.type)\n",
     "    print(param.source)\n",
     "    print(param.unit)\n",
     "    print(param.unit_id)\n",
     "    print(param.format)\n",
-    "    print(param.terms)\n",
+    "    print(param.terms) # list of dictionaries\n",
     "    print(param.comment)\n",
     "    print(param.PI)\n",
     "    print(param.dataseries)\n",
     "    print(param.colno)\n",
-    "    print(param.methodid)"
+    "    print(param.methodid)\n",
+    "    print(param.method) # PanMethod"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b73bb66f-5539-4156-8d85-b9dcbe58da9a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "### combine list of all parameter names with unit\n",
+    "params = \"; \".join([f'{param.name} [{param.unit}]' if param.unit else param.name for param in ds.params.values()])\n",
+    "print(params)"
    ]
   },
   {
@@ -377,22 +380,44 @@
    },
    "outputs": [],
    "source": [
+    "### PanParam(id, name, shortName, synonym, type, source, unit=None, unit_id=None, format=None, terms=[], comment=None, PI={}, dataseries=None, colno=None, methodid=None, method)\n",
     "df_params = pd.DataFrame()\n",
     "for ind, value in enumerate(ds.params.values()):\n",
     "    df_params.loc[ind,'id'] = value.id\n",
     "    df_params.loc[ind,'name'] = value.name\n",
     "    df_params.loc[ind,'shortName'] = value.shortName\n",
+    "    # df_params.loc[ind,'synonym'] = value.synonym # is dictionary not value\n",
+    "    df_params.loc[ind,'type'] = value.type\n",
     "    df_params.loc[ind,'source'] = value.source\n",
     "    df_params.loc[ind,'unit'] = value.unit\n",
     "    df_params.loc[ind,'unit_id'] = value.unit_id\n",
     "    df_params.loc[ind,'format'] = value.format\n",
-    "#    df_params.loc[ind,'terms'] = value.terms # is list not value\n",
+    "    # df_params.loc[ind,'terms'] = value.terms # is dictionary not value\n",
     "    df_params.loc[ind,'comment'] = value.comment\n",
-    "#    df_params.loc[ind,'PI'] = value.PI # is list not value\n",
+    "    # df_params.loc[ind,'PI'] = value.PI # is dictionary not value\n",
     "    df_params.loc[ind,'dataseries'] = value.dataseries\n",
     "    df_params.loc[ind,'colno'] = value.colno\n",
-    "    df_params.loc[ind,'methodid'] = value.methodid\n",
+    "    df_params.loc[ind,'method id'] = value.methodid\n",
+    "    if value.method is not None:\n",
+    "        df_params.loc[ind,'method name'] = value.method.name #PanMethod\n",
+    "        df_params.loc[ind,'method name'] = 'None'\n",
     "df_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9f19753-69a2-4ffd-a576-33d8e49ee0ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### PanMethod(id, name, terms=[])\n",
+    "for param in ds.params.values():\n",
+    "    if param.method is not None:\n",
+    "        print(param.method.id)   \n",
+    "        print(param.method.name)  \n",
+    "        print(param.method.terms) \n",
+    "        # print(param.method.__dict__)"
    ]
   },
   {
@@ -404,7 +429,7 @@
    },
    "outputs": [],
    "source": [
-    "ds.events #list of PanEvent"
+    "ds.events # list of PanEvent"
    ]
   },
   {
@@ -416,7 +441,7 @@
    },
    "outputs": [],
    "source": [
-    "#PanEvent(label, latitude=None, longitude=None, latitude2=None, longitude2=None, elevation=None, datetime=None, datetime2=None, device=None, basis=None, location=None, campaign=None, id=None, deviceid=None)\n",
+    "### PanEvent(label, latitude=None, longitude=None, latitude2=None, longitude2=None, elevation=None, datetime=None, datetime2=None, basis=None, location=None, campaign=None, id=None, method=None)\n",
     "for ev in ds.events:\n",
     "    print(ev.label)\n",
     "    print(ev.latitude)\n",
@@ -427,34 +452,12 @@
     "    print(ev.datetime)\n",
     "    print(ev.datetime2)\n",
     "    print(ev.device)\n",
-    "    print(ev.basis)\n",
+    "    print(ev.basis) # PanBasis\n",
     "    print(ev.location)\n",
-    "    print(ev.campaign)\n",
+    "    print(ev.campaign) # PanCampaign\n",
     "    print(ev.id)\n",
-    "    print(ev.deviceid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5bf5a3c6-d49a-4bbe-8d5b-19e068ea0ae9",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# PanCampaign is part of events\n",
-    "#PanCampaign(name=None, URI=None, start=None, end=None, startlocation=None, endlocation=None, BSHID=None, expeditionprogram=None)\n",
-    "for ev in ds.events:\n",
-    "    print(ev.campaign.name)\n",
-    "    print(ev.campaign.URI)\n",
-    "    print(ev.campaign.start)\n",
-    "    print(ev.campaign.end)\n",
-    "    print(ev.campaign.startlocation)\n",
-    "    print(ev.campaign.endlocation)\n",
-    "    print(ev.campaign.BSHID)\n",
-    "    print(ev.campaign.expeditionprogram)\n",
-    "    "
+    "    print(ev.deviceid)\n",
+    "    print(ev.method) # PanMethod"
    ]
   },
   {
@@ -466,13 +469,34 @@
    },
    "outputs": [],
    "source": [
-    "# PanBasis is part of events\n",
-    "#PanBasis(name=None, URI=None, callSign=None, IMOnumber=None)\n",
+    "### PanBasis(name=None, URI=None, callSign=None, IMOnumber=None)\n",
     "for ev in ds.events:\n",
     "    print(ev.basis.name)\n",
     "    print(ev.basis.URI)\n",
     "    print(ev.basis.callSign)\n",
     "    print(ev.basis.IMOnumber)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bf5a3c6-d49a-4bbe-8d5b-19e068ea0ae9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "### PanCampaign(name=None, URI=None, start=None, end=None, startlocation=None, endlocation=None, BSHID=None, expeditionprogram=None)\n",
+    "for ev in ds.events:\n",
+    "    print(ev.campaign.name)\n",
+    "    print(ev.campaign.URI)\n",
+    "    print(ev.campaign.start)\n",
+    "    print(ev.campaign.end)\n",
+    "    print(ev.campaign.startlocation)\n",
+    "    print(ev.campaign.endlocation)\n",
+    "    print(ev.campaign.BSHID)\n",
+    "    print(ev.campaign.expeditionprogram)\n",
+    "    "
    ]
   },
   {
@@ -509,7 +533,7 @@
    },
    "outputs": [],
    "source": [
-    "#PanProject(label, name, URL=None, awardURI=None, id=None)\n",
+    "### PanProject(label, name, URL=None, awardURI=None, id=None)\n",
     "for pro in ds.projects:\n",
     "    print(pro.label)\n",
     "    print(pro.name)\n",
@@ -581,6 +605,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0336a5fb-2f21-4634-99b2-6eb3d36fe575",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.keywords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fb7d6e2a-c8b2-4762-91a2-2908d16a3a89",
    "metadata": {
     "tags": []
@@ -623,7 +657,7 @@
    },
    "outputs": [],
    "source": [
-    "ds.licence #PanLicence"
+    "ds.licence # PanLicence"
    ]
   },
   {
@@ -635,7 +669,7 @@
    },
    "outputs": [],
    "source": [
-    "#PanLicence(label, name, URI=None)\n",
+    "### PanLicence(label, name, URI=None)\n",
     "print(ds.licence.label)\n",
     "print(ds.licence.name)\n",
     "print(ds.licence.URI)"
@@ -855,9 +889,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:.conda-krc]",
+   "display_name": "Python [conda env:pangaeapy]",
    "language": "python",
-   "name": "conda-env-.conda-krc-py"
+   "name": "conda-env-pangaeapy-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -869,7 +903,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
