--- a/Python/PANGAEApy_practical/pangaeapy_practical_solutions.ipynb
+++ b/Python/PANGAEApy_practical/pangaeapy_practical_solutions.ipynb
@@ -20,7 +20,7 @@
     "This notebook will guide you how to retrieve diverse earth- and environmental data and its metadata from the [PANGAEA data repository](https://www.pangaea.de) using Python. It uses the [PangaeaPy package](https://pypi.org/project/pangaeapy/), to facilitate the data download.\n",
     "\n",
     "Run this notebook in:\n",
-    "[GoogleColab](https://colab.research.google.com/github/pangaea-data-publisher/community-workshop-material/blob/master/Python/PANGAEApy_practical/PANGAEApy_practical.ipynb): <a target=\"_blank\" href=\"https://colab.research.google.com/github/pangaea-data-publisher/community-workshop-material/blob/master/Python/PANGAEApy_practical/pangaeapy_practical.ipynb\">\n",
+    "[GoogleColab](https://colab.research.google.com/github/pangaea-data-publisher/community-workshop-material/blob/master/Python/PANGAEApy_practical/pangaeapy_practical.ipynb): <a target=\"_blank\" href=\"https://colab.research.google.com/github/pangaea-data-publisher/community-workshop-material/blob/master/Python/PANGAEApy_practical/pangaeapy_practical.ipynb\">\n",
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>"
    ]
@@ -70,7 +70,7 @@
    "source": [
     "### PANGAEApy\n",
     "## if you need to install PANGAEApy use pip\n",
-    "# !pip install pangaeapy # comment to not install pangaeapy\n",
+    "!pip install pangaeapy # comment to not install pangaeapy\n",
     "\n",
     "## if you need to upgrade PANGAEApy use \n",
     "# !pip install pangaeapy --upgrade # Uncomment to upgrade pangaeapy\n",
@@ -902,7 +902,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#@title Solution 3.3.1\n",
+    "### solution\n",
     "ds = PanDataSet(\"https://doi.pangaea.de/10.1594/PANGAEA.937210\", include_data=False)\n",
     "ds.title"
    ]
