--- a/Python/PANGAEApy_practical/pangaeapy_practical.ipynb
+++ b/Python/PANGAEApy_practical/pangaeapy_practical.ipynb
@@ -20,7 +20,7 @@
     "This notebook will guide you how to retrieve diverse earth- and environmental data and its metadata from the [PANGAEA data repository](https://www.pangaea.de) using Python. It uses the [PangaeaPy package](https://pypi.org/project/pangaeapy/), to facilitate the data download.\n",
     "\n",
     "Run this notebook in:\n",
-    "[GoogleColab](https://colab.research.google.com/github/pangaea-data-publisher/community-workshop-material/blob/master/Python/PANGAEApy_practical/PANGAEApy_practical.ipynb): <a target=\"_blank\" href=\"https://colab.research.google.com/github/pangaea-data-publisher/community-workshop-material/blob/master/Python/PANGAEApy_practical/pangaeapy_practical.ipynb\">\n",
+    "[GoogleColab](https://colab.research.google.com/github/pangaea-data-publisher/community-workshop-material/blob/master/Python/PANGAEApy_practical/pangaeapy_practical.ipynb): <a target=\"_blank\" href=\"https://colab.research.google.com/github/pangaea-data-publisher/community-workshop-material/blob/master/Python/PANGAEApy_practical/pangaeapy_practical.ipynb\">\n",
     "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
     "</a>"
    ]
@@ -73,7 +73,7 @@
     "# !pip install pangaeapy # comment to not install pangaeapy\n",
     "\n",
     "## if you need to upgrade PANGAEApy use \n",
-    "# !pip install pangaeapy --upgrade # Uncomment to upgrade pangaeapy\n",
+    "!pip install pangaeapy --upgrade # Uncomment to upgrade pangaeapy\n",
     "\n",
     "## check version of PANGAEApy\n",
     "# !pip show pangaeapy\n",
