updated general python README

--- a/Python/PANGAEApy_practical/pangaeapy_practical.ipynb
+++ b/Python/PANGAEApy_practical/pangaeapy_practical.ipynb
@@ -70,10 +70,10 @@
    "source": [
     "### PANGAEApy\n",
     "## if you need to install PANGAEApy use pip\n",
-    "# !pip install pangaeapy # comment to not install pangaeapy\n",
+    "!pip install pangaeapy # comment to not install pangaeapy\n",
     "\n",
     "## if you need to upgrade PANGAEApy use \n",
-    "!pip install pangaeapy --upgrade # Uncomment to upgrade pangaeapy\n",
+    "# !pip install pangaeapy --upgrade # Uncomment to upgrade pangaeapy\n",
     "\n",
     "## check version of PANGAEApy\n",
     "# !pip show pangaeapy\n",
