updated download binary part

--- a/Python/PANGAEApy_practical/pangaeapy_practical.ipynb
+++ b/Python/PANGAEApy_practical/pangaeapy_practical.ipynb
@@ -15,7 +15,7 @@
     "**How to search and download data from PANGAEA**\n",
     "\n",
     "By: Kathrin Riemann-Campe\n",
-    "Last updated: 2025-05-07\n",
+    "Last updated: 2025-05-12\n",
     "\n",
     "This notebook will guide you how to retrieve diverse earth- and environmental data and its metadata from the [PANGAEA data repository](https://www.pangaea.de) using Python. It uses the [PangaeaPy package](https://pypi.org/project/pangaeapy/), to facilitate the data download.\n",
     "\n",
@@ -401,7 +401,7 @@
    },
    "outputs": [],
    "source": [
-    "# show first 3 lines\n",
+    "### show first 3 lines\n",
     "df_query_results_all.head(3)"
    ]
   },
@@ -413,7 +413,7 @@
    },
    "outputs": [],
    "source": [
-    "# show last 3 lines\n",
+    "### show last 3 lines\n",
     "df_query_results_all.tail(3)"
    ]
   },
@@ -1071,14 +1071,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Display location of dataset samples\n",
-    "Example dataset: https://doi.pangaea.de/10.1594/PANGAEA.923033"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Save data"
    ]
   },
@@ -1129,7 +1121,7 @@
     "for i in np.arange(0,query.totalcount,500):\n",
     "\n",
     "    # store result of individual step in qs\n",
-    "    qs = pan.PanQuery(\"device:thermosalinograph citation:year:202*\", limit = 500, offset=i)\n",
+    "    qs = pan.PanQuery('device:thermosalinograph citation:year:202* project:\"dam underway\"', limit = 500, offset=i)\n",
     "    \n",
     "    # convert qs result with 500 entries to data frame df_qs\n",
     "    df_qs = pd.DataFrame(qs.result)\n",
@@ -1146,7 +1138,7 @@
     "tags": []
    },
    "source": [
-    "#### Download multiple datasets and treat them as individuals\n",
+    "#### 4.2.1 Download multiple datasets and treat them as individuals\n",
     "Note: Data collections and restricted datasets cannot be downloaded"
    ]
   },
@@ -1204,7 +1196,7 @@
    },
    "outputs": [],
    "source": [
-    "data_dict['910965'].head()"
+    "data_dict['918071'].head()"
    ]
   },
   {
@@ -1230,6 +1222,108 @@
     "    print(f'PANGAEA dataset {key} saved')\n",
     "    # Save to csv\n",
     "    data_dict[key].to_csv(os.path.join(data_directory, f'PANGAEA_dataset_{key}.csv'),index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.2.2 Download and combine data and metadata of query results\n",
+    "\n",
+    "NOTE: As a safety precaution, the number of metadata requests is limited for a specific time period. \n",
+    "\n",
+    "_Received too many (metadata) requests error (429)...waiting 30s -_\n",
+    "\n",
+    "If you have larger requests, prepare to wait or use a different tool e.g. OAI-PMH (https://wiki.pangaea.de/wiki/OAI-PMH)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Create one data frame for all datasets\n",
+    "data_all = pd.DataFrame()\n",
+    "\n",
+    "### loop over all datasets in df_all\n",
+    "# for ind,value in df_all['URI'].items():\n",
+    "### only download first 3 results during workshop\n",
+    "for ind,value in df_all['URI'][0:3].items(): \n",
+    "    \n",
+    "    ## use PanDataSet to get metadata and data and put them into 2 diferent dataframes\n",
+    "    ds = PanDataSet(value)\n",
+    "\n",
+    "    print(ind, ds.doi)\n",
+    "\n",
+    "    ## put metadata into df_all in new columns\n",
+    "    df_all.loc[ind,'Title'] = ds.title\n",
+    "    df_all.loc[ind,'Publication date'] = ds.date\n",
+    "    df_all.loc[ind,'Authors'] = {\"; \".join([x.fullname for x in ds.authors])}\n",
+    "    df_all.loc[ind,'Citation'] = ds.citation\n",
+    "    df_all.loc[ind,'DOI'] = ds.doi\n",
+    "    df_all.loc[ind,'Parameters'] = \"; \".join([f'{param.name} [{param.unit}]' if param.unit else param.name for param in ds.params.values()])\n",
+    "    if ds.events:\n",
+    "        df_all.loc[ind,'Event'] = \"; \".join([x.label for x in ds.events])\n",
+    "    \n",
+    "    ### Translate default short parameter names to long parameter names and add unit\n",
+    "    get_long_parameters(ds)\n",
+    "    \n",
+    "    ### create new data dataframe for each query result \n",
+    "    df_data = pd.DataFrame()\n",
+    "    df_data = ds.data\n",
+    "    df_data['DOI'] = ds.doi\n",
+    "\n",
+    "    ### combine all datasats into one dataframe\n",
+    "    data_all = pd.concat([data_all,df_data], ignore_index=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### show first two rows of metadata in df_all\n",
+    "df_all.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### show first two rows of data in data_all\n",
+    "data_all.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Create data directory\n",
+    "data_directory = \"PANGAEA_data\"\n",
+    "### Check if it already exists before creating it\n",
+    "if not os.path.isdir(data_directory):\n",
+    "    os.mkdir(data_directory)\n",
+    "    \n",
+    "### Save as tab delimited text file\n",
+    "## set filenames\n",
+    "filename1 = 'thermosalinograph_metadata.txt'\n",
+    "filename2 = 'thermosalinograph_data.txt'\n",
+    "\n",
+    "df_all.to_csv(os.path.join(data_directory, filename1), sep='\\t', encoding='utf-8', index=False)\n",
+    "data_all.to_csv(os.path.join(data_directory, filename2), sep='\\t', encoding='utf-8', index=False)"
    ]
   },
   {
@@ -1327,12 +1421,19 @@
     "if not os.path.isdir(data_directory):\n",
     "    os.mkdir(data_directory)\n",
     "\n",
-    "# Create file urls\n",
-    "df[\"image_url\"] = [f'https://download.pangaea.de/dataset/{pan_id}/files/{img}' for img in df['Image']]\n",
-    "# Download images\n",
-    "for i, file_url in enumerate(df[\"image_url\"]):\n",
-    "    urlretrieve(file_url, os.path.join(data_directory, df[\"Image\"].iloc[i]))\n",
-    "    print(f'{file_url} downloaded')"
+    "### example to download only 1 image at specific time step\n",
+    "df = ds.data[ds.data['DATE/TIME']=='2019-10-01 23:15:06']\n",
+    "\n",
+    "### Create file urls\n",
+    "df[\"image_url\"] = [f'https://download.pangaea.de/dataset/{ds.id}/files/{img}' for img in df['Image']]\n",
+    "\n",
+    "### download images\n",
+    "for i, file_url in enumerate(df['image_url']):\n",
+    "    response = requests.get(file_url,data_directory)    \n",
+    "    index = df.loc[(df == file_url).any(axis=1)].index[0]\n",
+    "    ### save image\n",
+    "    open(data_directory+'/'+df.loc[index,'Image'], 'wb').write(response.content)\n",
+    "    print(df.loc[index,'Image'] +' downloaded')"
    ]
   },
   {
