--- a/Python/Data_curation_checklist/Digital_Submission_Helper.ipynb
+++ b/Python/Data_curation_checklist/Digital_Submission_Helper.ipynb
@@ -60,7 +60,7 @@
     "from datetime import date, timedelta\n",
     "\n",
     "# Latitude/Longitude conversion package\n",
-    "# !pip install LatLon23 \n",
+    "!pip install LatLon23 \n",
     "from LatLon23 import string2latlon\n",
     "\n",
     "# needed to download PANGAEA parameters\n",
